app/src/pages/bestiary/beast/pages/view/gmView/components/leftColumn/components/combat/components/attackDisplay/components/AttackStats.css
.attack-stats-shell span {
    display: flex;
    justify-content: space-between;
    background: #f3f3f3;
    padding: 3px 5px;
    color: #434343;
}

.attack-stats-shell h6 {
    padding: 0;
    font-family: 'Source Sans 3';
    font-size: 15px;
}

.attack-stats-shell span p {
    font-style: italic;
}

.attack-stats-shell>.attack-stats-inner-shell,
.attack-stats-left>div {
    display: flex;
    justify-content: space-evenly;
}

.swarm-stats {
    display: flex;
    justify-content: center;
    width: 100%;
}

.swarm-stats>div {
    display: flex;
    justify-content: center;
    min-width: 33%
}

.swarm-stats>div>p {
    min-width: 33%;
    padding: 0 5px;
}

.swarm-stats>div>p:first-child {
    text-align: right;
}

.attack-stats-shell>div>div {
    width: 66%;
}

.attack-stats-shell>div>div:last-child {
    width: 100%;
}

.attack-stats-left>div>div {
    display: flex;
    justify-content: space-evenly;
    width: 33%;
}

.attack-stats-left>div>div p {
    width: 45%;
    padding: 0 5px;
}

.attack-stats-left>div>div p:first-child {
    text-align: right;
}

.attack-stats-shell .html-display-shell {
    margin: 5px 9px;
    border-bottom: 1px solid #e1e7ea;
}

.attack-stats-shell.spell-reference .body-shell {
    padding: 3px 5px;
}

.attack-stats-shell .bottom-margin {
    padding-bottom: 5px;
}

.spell-display-tooltip .spell-display-shell {
    margin-right: 0;
    width: unset;
    color: black;
}

.spell-display-tooltip .spell-display-shell i {
    display: none;
}

